SUBDIRS = src gngeo.dat
DIST_SUBDIRS = src gngeo.dat pnd
dist_man_MANS = gngeo.1

EXTRA_DIST = sample_gngeorc romrc FAQ TODO NEWS \
             dumpgfx.tgz \
             README.GP2X gngeorc.gp2x \
             Makefile.win devcpp_premake.mak gngeo32.dev config.win32 \
               gngeo32.ico gngeo32_private.rc
